# test_tasks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasks.db  test.db
app/: __init__.py  database.py  main.py
app/api/: __init__.py  tasks.py
app/crud/: task.py
app/models/: task.py
app/schemas/: task.py
tests/: __init__.py  conftest.py  test_tasks.py
